--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -24,6 +24,32 @@ body {
   border-radius: 10px;
 }
 
+.navbar-default .badge {
+  position: absolute;
+  top: 5px;
+  right: -10px;
+  padding: 5px 10px;
+  border-radius: 50%;
+  background: red;
+  color: white;
+}
+
+.navbar-default .restauranteBadge {
+  top: 0px !important;
+  right: -22px !important;
+  padding: 4px 6px !important;
+  border-radius: 30% !important;
+  font-size: 15px !important; 
+}
+
+.navbar-default .repartidorBadge {
+  top: -2px !important;
+  right: -25px !important;
+  padding: 4px 6px !important;
+  border-radius: 30% !important;
+  font-size: 16px !important; 
+}
+
 .btn-orange{
   background-color: #f47b00 !important;
   border-color: #f57d05 !important;
@@ -31,9 +57,26 @@ body {
   border-radius: 4px;
 }
 
+.btn-orange2{
+  background-color: #ff5620 !important;
+  border-color: #fc4b10 !important;
+  font-size: 22px;
+  border-radius: 4px;
+  font-weight: bold !important;
+}
+
 .text-inicio{
   font-size: 20px;
   text-align: center;
+}
+
+.text-municipio{
+  font-size: 27px;
+  text-align: center;
+}
+
+.text-municipio i{
+  font-size: 18px !important;
 }
 
 .inicio{
@@ -76,10 +119,41 @@ body {
   margin-right: -27px;
 }
 
+.res-nom2 *{
+  color: #212529f5 !important;
+  font-size: 24px;
+}
+
+.res-nom-big2 *{
+  color: #212529f5 !important;
+  font-size: 22px;
+}
+
+.res-nom-xbig2 *{
+  color: #212529f5 !important;
+  font-size: 19px;
+}
+
 .navbar .res-nom *{
   color: white !important;
   text-align: left;
   font-size: 24px;
+}
+
+.navbar .res-nom-big *{
+  color: white !important;
+  text-align: left;
+  font-size: 22px;
+  margin-top: 2px;
+  margin-left: -4px;
+}
+
+.navbar .res-nom-xbig *{
+  color: white !important;
+  text-align: left;
+  font-size: 19px;
+  margin-top: 4px;
+  margin-left: -4px;
 }
 
 .navbar .icon {
@@ -94,6 +168,49 @@ body {
   top: -10%;
   position: absolute;
   text-align: center;
+}
+
+.icon-plus{
+  color: white;
+  font-size: 23px;
+  margin-top: 12px;
+  margin-left: -13px;
+}
+
+.icon-minus{
+  color: white;
+  font-size: 23px;
+  margin-top: 12px;
+  margin-left: 23px;
+}
+
+.number-cantidad{
+  color: white;
+  font-size: 30px;
+  text-align: center;
+  font-weight: bold;
+}
+
+.boton-producto{
+  font-size: 18px !important;
+  margin-right: 30px !important;
+  margin-top: 4.5px;
+  /* font-weight: bold !important; */
+}
+
+.producto-icon{
+  font-size: 25px;
+  color: #f47b00  !important;
+  margin-top: 2px;
+  margin-left: 20px;
+}
+
+.producto-nota{
+  font-size: 20px;
+}
+
+.producto-notabox{
+  margin-top: -10px;
 }
 
 .mat-drawer-container.mat-sidenav-container{
@@ -139,6 +256,17 @@ body {
 
 .navbar .icono-Ralph img{
   width: 35px;
+  margin-top: -3px;
+}
+
+.navbar .icono-Ralph-inicio img{
+  width: 32px;
+  margin-top: 1px;
+}
+
+.restaurante-logo img{
+  margin-top: -7px;
+  margin-right: -15px;
 }
 
 .navbar-bottom {
@@ -172,6 +300,34 @@ body {
   color: #f47b00  !important;
 }
 
+.icon-trash{
+  font-size: 28px;
+  color: #868585e8;
+}
+
+.icon-bottom-1{
+  font-size: 35px;
+  margin-top: -3px;
+  margin-right: -17px;
+}
+
+.icon-bottom-2{
+  font-size: 35px;
+  margin-top: -3px;
+  margin-left: -17px;
+}
+
+.categorias{
+  color: white;
+  font-size: 29px;
+  text-align: center;
+  margin-top: 8px;
+}
+
+.categorias-icon{
+  font-size: 20px;
+}
+
 .text{
   font-size: 20px;
 }
@@ -195,6 +351,10 @@ body {
 }
 
 .pedido-card-text{  
+  font-size: 22px;
+}
+
+.pedido-card-text2{  
   font-size: 22px;
 }
 
@@ -307,16 +467,40 @@ color: #ff4409;
   color: black;
 }
 
- .avatar{
+.avatar{
   margin-top: 2px;
   margin-right: 15px;
   margin-left: 0px;
+}
+
+.avatar2{
+  margin-top: -5px;
+  margin-right: 8px;
+  margin-left: -5px;
 }
 
 .avatar img{
   border-radius: 50%;
   width: 40px;
   height: 40px;
+}
+
+.avatar2 img{
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
+
+ .avatar-2{
+  margin-top: -12px;
+  margin-right: 5px;
+  margin-left: 12px;
+}
+
+.restaurante-nombre{
+  font-size: 28px;
+  margin-left: 0px;
+  color: black;
 }
 
 .badge-primary{
@@ -420,6 +604,45 @@ input[type="file"] {
   height: 200px;
   border-radius: 5px;
   border: 1px solid gray;
+}
+
+.img-producto img{
+  width: 320px;
+  height: 250px;
+  border-radius: 5px;
+  border: 1px solid gray;
+}
+
+.panel-producto{
+  background-color: white;
+  border-radius: 5px;
+}
+
+.producto-nombre{
+  font-size: 25px;
+  text-align: justify;
+}
+
+.producto-precio{
+  font-size: 20px;
+  text-align: justify;
+  color: green;
+  font-weight: bold;
+}
+
+.producto-descripcion{
+  font-size: 20px;
+  text-align: justify;
+  margin: 10px;
+  margin-bottom: 0px;
+}
+
+.producto-descripcion-big{
+  font-size: 18px;
+  text-align: justify;
+  margin-bottom: -3px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .btn-modal-cancel{
