--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -24,6 +24,33 @@ body {
   border-radius: 10px;
 }
 
+.badgeRed .badge {
+  position: absolute;
+  margin-top: -10px;
+  margin-left: 6px;
+  background: red;
+  color: white;
+  font-size: 12px;
+}
+
+.badgeBlue .badge {
+  position: absolute;
+  margin-top: -10px;
+  margin-left: 6px;
+  background: #007bff;
+  color: white;
+  font-size: 12px;
+}
+
+.badgeGreen .badge {
+  position: absolute;
+  margin-top: -10px;
+  margin-left: 6px;
+  background: #28a745;
+  color: white;
+  font-size: 12px;
+}
+
 .navbar-default .badge {
   position: absolute;
   top: 5px;
@@ -45,6 +72,14 @@ body {
 .navbar-default .repartidorBadge {
   top: -2px !important;
   right: -25px !important;
+  padding: 4px 6px !important;
+  border-radius: 30% !important;
+  font-size: 16px !important; 
+}
+
+.navbar-default .pedidosBadge {
+  top: 3px !important;
+  right: -8px !important;
   padding: 4px 6px !important;
   border-radius: 30% !important;
   font-size: 16px !important; 
@@ -492,7 +527,7 @@ color: #ff4409;
 }
 
  .avatar-2{
-  margin-top: -12px;
+  margin-top: -20px;
   margin-right: 5px;
   margin-left: 12px;
 }
@@ -501,6 +536,10 @@ color: #ff4409;
   font-size: 28px;
   margin-left: 0px;
   color: black;
+}
+
+.restaurante-nombre .nombre{
+  margin-bottom: 50px;
 }
 
 .badge-primary{
