Politicas de privacidad

--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -496,6 +496,14 @@ color: #ff4409;
   margin-top: -7px;
 }
 
+.politicas-sub{
+  font-size: 19px;
+}
+
+.politicas-reg{
+  font-size: 14px;
+}
+
 .subtitle{
   font-size: 32px;
   margin-left: 20px;
