--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -408,6 +408,11 @@ body {
   font-size: 18px;
 }
 
+.text3{
+  font-size: 18px;
+  color: black;
+}
+
 .status{
   margin-top: -18px;
 }
@@ -623,6 +628,45 @@ color: #ff4409;
   padding-top: 5px;
 }
 
+.card-nombre-2{
+  color: white;
+  font-size: 30px;
+  font-weight: bold;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 24px;
+  padding-bottom: 18px;
+  margin-top: 0px;
+  margin-left: -10px;
+  border-radius: 5px;
+  background-color: #f78216 !important;
+}
+
+.card-nombre-3{
+  margin-top: 0px;
+  margin-left: 10px;
+  font-size: 30px;
+}
+
+.little-letters{
+  font-size: 12px;
+}
+
+.little-letters-2{
+  font-size: 16px;
+  margin-bottom: -10px;
+}
+
+.pedido-card-tiempo-2{  
+  font-size: 17px;
+  margin-top: -4px;
+  margin-bottom: 7px;
+  font-weight: bold;
+  background-color: #ffd7b2e0;
+  border-radius: 5px;
+  color: #000000b8;
+}
+
 .card-precio{
   color: green;
   font-weight: bold;
@@ -635,6 +679,12 @@ color: #ff4409;
 .sinpedidos{
   font-size: 30px;
   margin: 50px;
+  color: #212529cf;
+}
+
+.sinpedidos-2{
+  font-size: 28px;
+  margin: 30px;
   color: #212529cf;
 }
 
