--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -532,7 +532,7 @@ body {
   padding-left: 90px !important;
   padding-top: 60px !important;
   padding-bottom: 50px !important;
-  opacity: 70%;
+  opacity: 0.7;
 }
 
 .icon-status-camino{
