--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -167,6 +167,16 @@ body {
   text-align: center;
 }
 
+.text-municipio2{
+  background-color: #ff8d00db;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  padding-bottom: 8px;
+  padding-top: 4px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 .text-municipio i{
   font-size: 18px !important;
 }
@@ -532,7 +542,7 @@ body {
   padding-left: 90px !important;
   padding-top: 60px !important;
   padding-bottom: 50px !important;
-  opacity: 0.7;
+  opacity: 0.70 !important;
 }
 
 .icon-status-camino{
