--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -459,6 +459,22 @@ body {
   color: #36c536;
 }
 
+.stats-correo{  
+  font-size: 18px;
+  word-break: break-all;
+}
+
+.stats-text{  
+  font-size: 18px;
+}
+
+.stats-numero{  
+  font-size: 14px;
+  padding-top: 3px;
+  margin-left: -5px;
+  margin-right: 5px;
+}
+
 .pedido-card-text{  
   font-size: 22px;
 }
