--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -410,6 +410,11 @@ body {
   color: #868585e8;
 }
 
+.icon-black{
+  font-size: 28px;
+  color: #131313f8;
+}
+
 .icon-bottom-1{
   font-size: 35px;
   margin-top: -3px;
