--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -619,6 +619,10 @@ color: #ff4409;
   font-size: 14px;
 }
 
+.ingredientes{
+  font-size: 1.35rem;
+}
+
 .subtitle{
   font-size: 30px;
   margin-left: 20px;
